<resources>
    <string name="app_name">Baking App</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="errorTextView">Failed to load data. Check Internet connection and try again</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="restart">Restart</string>
    <string name="guess">Guess</string>
    <string name="notification_text">Notification Text</string>

    <string name="nutella_pie_label" translatable="true">Nutella Pie</string>
    <string name="Brownies_label" translatable="true">Brownies</string>
    <string name="cheese_cake_label" translatable="true">Cheese Cake</string>
    <string name="yello_cake_label" translatable="true">Yellow Cake</string>

    <string name="nutella_pie_key" translatable="true">N_p</string>
    <string name="Brownies_key" translatable="true">B_c</string>
    <string name="cheese_cake_key" translatable="true">C_c</string>
    <string name="yello_cake_key" translatable="true">Y_c</string>

    <string name="listPreferencelabel" translatable="true">Select Favourite Recipe</string>
    <string name="listPreferencekey">pref_key</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
